@@ -1,3 +1,7 @@
+2004-03-19  Anton Blanchard  <anton@samba.org>
+
+	* daemon/opd_sfile.c: Add function name to some error messages
+
 2004-03-04  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* utils/opcontrol: tweak a bit error message.
